; ModuleID = '/home/carl/AnghaBench/linux/kernel/sched/extr_topology.c_destroy_sched_domain.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/sched/extr_topology.c_destroy_sched_domain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sched_domain = type { %struct.sched_domain*, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sched_domain*)* @destroy_sched_domain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @destroy_sched_domain(%struct.sched_domain* %0) #0 {
  %2 = alloca %struct.sched_domain*, align 8
  store %struct.sched_domain* %0, %struct.sched_domain** %2, align 8
  %3 = load %struct.sched_domain*, %struct.sched_domain** %2, align 8
  %4 = getelementptr inbounds %struct.sched_domain, %struct.sched_domain* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @free_sched_groups(i32 %5, i32 1)
  %7 = load %struct.sched_domain*, %struct.sched_domain** %2, align 8
  %8 = getelementptr inbounds %struct.sched_domain, %struct.sched_domain* %7, i32 0, i32 0
  %9 = load %struct.sched_domain*, %struct.sched_domain** %8, align 8
  %10 = icmp ne %struct.sched_domain* %9, null
  br i1 %10, label %11, label %23

11:                                               ; preds = %1
  %12 = load %struct.sched_domain*, %struct.sched_domain** %2, align 8
  %13 = getelementptr inbounds %struct.sched_domain, %struct.sched_domain* %12, i32 0, i32 0
  %14 = load %struct.sched_domain*, %struct.sched_domain** %13, align 8
  %15 = getelementptr inbounds %struct.sched_domain, %struct.sched_domain* %14, i32 0, i32 1
  %16 = call i64 @atomic_dec_and_test(i32* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %11
  %19 = load %struct.sched_domain*, %struct.sched_domain** %2, align 8
  %20 = getelementptr inbounds %struct.sched_domain, %struct.sched_domain* %19, i32 0, i32 0
  %21 = load %struct.sched_domain*, %struct.sched_domain** %20, align 8
  %22 = call i32 @kfree(%struct.sched_domain* %21)
  br label %23

23:                                               ; preds = %18, %11, %1
  %24 = load %struct.sched_domain*, %struct.sched_domain** %2, align 8
  %25 = call i32 @kfree(%struct.sched_domain* %24)
  ret void
}

declare dso_local i32 @free_sched_groups(i32, i32) #1

declare dso_local i64 @atomic_dec_and_test(i32*) #1

declare dso_local i32 @kfree(%struct.sched_domain*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
